# wiki-dump-extractor-json

./: .gitignore  LICENSE  README.md  pyproject.toml
wiki_dump_extractor_json/: __init__.py  __main__.py  dump_xml_parser.py  extractor.py
