[project]
name = "wiki-dump-extractor-json"
version = "1.0.3"
description = "An efficient Wikipedia XML dump extractor which converts each page to JSON."
readme = "README.md"
license = "MIT"
authors = [{name = "ekcbw"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "mwparserfromhell",
    "python-dateutil",
]

[project.scripts]
wiki-dump-extractor-json = "wiki_dump_extractor_json.__main__:main_cli"

[project.urls]
Homepage = "https://github.com/ekcbw/wiki-dump-extractor-json"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wiki_dump_extractor_json"]